Removed method section

--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@
                                 </p>
                                 <h3>Results</h3>
                                 <p>
-                                This research is currently in progress.
+                                This research is currently in an unpublished draft. Contact me if you are interested.
                                 </p>
                                 <p>
                                 <h3>Literature Cited</h3>
