--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Fusting Consulting</title>
+    <title>DataDriven</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -43,7 +43,7 @@
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
                 </button>
-                <a class="navbar-brand page-scroll" href="#page-top">Fusting Consulting</a>
+                <a class="navbar-brand page-scroll" href="#page-top">Data Driven</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -73,7 +73,7 @@
         <div class="container">
             <div class="intro-text">
                 <div class="intro-lead-in">Activate Your Data</div>
-                <div class="intro-heading">Data Science Consulting</div>
+                <div class="intro-heading">DataDriven</div>
                 <a href="#contact" class="page-scroll btn btn-xl">Contact</a>
             </div>
         </div>
